--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Post Name</title>
+	<title>Reading List</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,18 +14,23 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<div class="nav-wrapper">
-		<div class="dots-wrapper">
-			<div id="dot-1" class="browser-dot"></div>
-			<div id="dot-2" class="browser-dot"></div>
-			<div id="dot-3" class="browser-dot"></div>
+	<section class="s1">
+		<div class="nav-wrapper">
+			<div class="dots-wrapper">
+				<div id="dot-1" class="browser-dot"></div>
+				<div id="dot-2" class="browser-dot"></div>
+				<div id="dot-3" class="browser-dot"></div>
+			</div>
+			<ul id="navigation">
+				<li><a href="#">Contact</a></li>
+			</ul>
 		</div>
-		<ul id="navigation">
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</div>
-	<div class="main-container">
-		<h3>Hello world!! This is my first post...</h3>
-	</div>
+		<div class="main-container">
+			<div class="quote">
+				<h3><q style="font-style: italic; color: grey;">A reader lives a thousand lives before he dies . . . The man who never reads lives only one.</q><br>
+				– George R.R. Martin</h3>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
