--- a/index.html
+++ b/index.html
@@ -27,9 +27,44 @@
 		</div>
 		<div class="main-container">
 			<div class="quote">
-				<h3><q style="font-style: italic; color: grey;">A reader lives a thousand lives before he dies . . . The man who never reads lives only one.</q><br>
+				<h5><q style="font-style: italic; color: grey;">A reader lives a thousand lives before he dies . . . The man who never reads lives only one.</q><br>
 				– George R.R. Martin</h3>
 			</div>
+		</div>
+	</section>
+	<section class="s2">
+		<div class="main-container">
+			<h1 style="text-align: center; margin: 0.5em 0em 0.5em 0em;">Current Literature</h1>
+			<div class="current-choices">
+				<div class="Physical">
+					<div id="preview-shadow">
+						<div id="preview">
+							<div id="corner-tl" class="corner"></div>
+							<div id="corner-tr" class="corner"></div>
+							<h3>Book</h3>
+							<img src="img/ancillary-justice.jpg">
+							<div id="corner-br" class="corner"></div>
+							<div id="corner-bl" class="corner"></div>
+						</div>
+					</div>
+				</div>
+				<div class="Audible">
+					<div id="preview-shadow">
+						<div id="preview">
+							<div id="corner-tl" class="corner"></div>
+							<div id="corner-tr" class="corner"></div>
+							<h3>Audible</h3>
+							<div id="corner-br" class="corner"></div>
+							<div id="corner-bl" class="corner"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="s1">
+		<div class="main-container">
+
 		</div>
 	</section>
 </body>
