--- a/reading-list.html
+++ b/reading-list.html
@@ -12,6 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
+	<link id="theme-style" rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 	<section class="s1">
@@ -20,6 +21,9 @@
 				<div id="dot-1" class="browser-dot"></div>
 				<div id="dot-2" class="browser-dot"></div>
 				<div id="dot-3" class="browser-dot"></div>
+				<div class="home-link">
+					<a href="index.html"><img src="img/EH-logo.png" alt="logo"></a>
+				</div>
 			</div>
 			<ul id="navigation">
 				<li><a href="#">Contact</a></li>
@@ -37,8 +41,8 @@
 			<h1 style="text-align: center; margin: 0.5em 0em 0.5em 0em;">Current Literature</h1>
 			<div class="current-choices">
 				<div class="physical">
-					<div id="preview-shadow">
-						<div id="preview">
+					<div id="preview-shadow-book">
+						<div id="preview-book">
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h3>Book</h3>
@@ -51,8 +55,8 @@
 					</div>
 				</div>
 				<div class="audible">
-					<div id="preview-shadow">
-						<div id="preview">
+					<div id="preview-shadow-book">
+						<div id="preview-book">
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h3>Audible</h3>
@@ -149,7 +153,8 @@
 	<section class="s2">
 		<div class="main-container">
 			<div class="pages" style="text-align:center">
-				<a href="page-2.html" class="next round">Next &raquo;</a>
+				<a href="index.html" class="previous round">&laquo; Main Page</a>
+				<a href="reading-list-page-2.html" class="next round">Next &raquo;</a>
 			</div>
 		</div>
 	</section>
