--- a/reading-list-page-2.html
+++ b/reading-list-page-2.html
@@ -12,6 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
+	<link id="theme-style" rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 	<section class="s1">
@@ -20,6 +21,9 @@
 				<div id="dot-1" class="browser-dot"></div>
 				<div id="dot-2" class="browser-dot"></div>
 				<div id="dot-3" class="browser-dot"></div>
+				<div class="home-link">
+					<a href="index.html"><img src="img/EH-logo.png" alt="logo"></a>
+				</div>
 			</div>
 			<ul id="navigation">
 				<li><a href="#">Contact</a></li>
@@ -180,8 +184,8 @@
 	<section class="s1">
 		<div class="main-container">
 			<div class="pages" style="text-align:center">
-				<a href="index.html" class="previous round">&laquo; Previous</a>
-				<a href="page-3.html" class="next round">Next &raquo;</a>
+				<a href="reading-list.html" class="previous round">&laquo; Previous</a>
+				<a href="reading-list-page-3.html" class="next round">Next &raquo;</a>
 			</div>
 		</div>
 	</section>
